completeo metodo de mostrar authores segun el año, con su logca del service y el controller todo marchando correctamente, aun falta unos controles de excepciones